--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
     padding: 2rem 1rem;
     margin: auto;
     background-color: #0a4872;
+    border-radius: 1rem;
   }
   .heading,
   p {
@@ -23,9 +24,11 @@ body {
     display: block;
     width: 50%;
     padding: 1rem;
-    height: 10px;
+    height: 5px;
     font-size: 1rem;
     margin: auto;
+    border-radius: 1rem;
+    border: transparent;
   }
   #next {
     margin-bottom: 1rem;
@@ -40,6 +43,7 @@ body {
     border-style: none;
     color: #063d4e;
     background-color: #96cbe4;
+    border-radius: 1rem;
   }
   table {
     margin-top: 2rem;
@@ -56,6 +60,7 @@ body {
     padding: 1rem;
     background-color: #fff;
     border-collapse: collapse;
+    border-radius: 1rem;
   }
   #hide {
     display: none;
